--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
