--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
     "lucide-react": "^0.540.0",
